[package]
name = "bond-hive"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "2.1.3" }
sylvia = "1.2.1"
schemars = "0.8.21"
cosmwasm-schema = "2.1.3"
serde = { version = "1.0.208", default-features = false, features = ["derive"] }
thiserror = "1.0.49"
cw20 = "2.0.0"
cw20-base = "2.0.0"
cw-storage-plus = "2.0.0"

[dev-dependencies]
sylvia = { version = "1.2.1", features = ["mt"] }
cosmwasm-schema = { version = "2.1.3" }
cosmwasm-std = { version = "2.1.3" }
cw-multi-test = { version = "2.1.0", features = ["staking"] }
